--- a/style.css
+++ b/style.css
@@ -71,6 +71,10 @@ body {
     text-align: center;
 }
 
+.containertwo {
+    padding-bottom: 50px;
+}
+
 .boxes {
     display: flex;
     justify-content: space-around;
@@ -129,3 +133,8 @@ body {
     color: white;
     padding : 25px 25px;
 }
+
+.boxes .caption {
+    text-align: center;
+    margin-top: 100px;
+  }
